# AWS-Exam-Simulator

./: .env.example  .gitignore  Dockerfile.agent  Dockerfile.mcp  Explanation Generator with AI.ipynb  LICENSE  Makefile  README.md  app.py  app2.py  app3.py  app4.py  app5.py  app6.py  app7.py  app8.py  app9.py  backend1.py  chat.ipynb  database_generator.ipynb  database_generator_cram.ipynb  database_generator_vce.ipynb  docker-compose.yml  exam_simulator.ipynb  explain.ipynb  explain.py  explain_v0.py  index.html  package-lock.json  package.json  report.py  requirements.txt  run.py  style.css  style1.css  style2.css  tailwind.config.js  tool.py  tool2.py  utils.py  (+7 more)
agent_runtime/: __init__.py  agent.py  agent.yaml  config.py  ollama_tutor.py  server.py  start_agent.py
agent_runtime/prompts/: aws_exam_tutor_system.txt
api/: proxy.js
exams/AWS/: DOP-C02-v1.json  MLS-C01-v1.json  MLS-C01-v2.json  MLS-C01-v3.json  MLS-C01.json  SAA-C03-v1.json  SAA-C03-v2.json
mcp_server/: README.md  pyproject.toml
mcp_server/src/aws_exam_tools/: __init__.py  exam_bank.py  models.py  server_fastmcp.py  session_store.py  tagging.py
questions/: AI-102.json  AI-900-v1.json  AI-900-v2.json  AI-900-v3.json  AWS.set  CLF-C02-v1.json  DP-100-v1.json  GCP-CA.json  GCP-ML-vA.json  GCP-ML-vB.json  MLS-C01-January.json  MLS-C01-v0624.json  SAA-C03-v2.json  SAP-C02-v1.json
questions/backup/: AI-900-v1.json  AI-900-v2.json  (+3 more)
src/: App.jsx  index.css
tests/: __init__.py  conftest.py  test_agent_mock.py  test_exam_bank.py  test_mcp_tools.py  test_session_store.py  test_tagging.py
(+26 files in other folders)
