[project]
name = "aws-exam-tools"
version = "1.0.0"
description = "Enterprise MCP server exposing AWS exam simulator tools (list/start/next/submit/explain/status)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=0.4.0",
    "pydantic>=2.7",
]

[project.scripts]
aws-exam-tools = "aws_exam_tools.server_fastmcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_exam_tools"]
